retrieveUnpackaged/objects/NOFA__c.object
<CustomObject>
    <description>This is the first tab in the CNCS app</description>
    <fields>
        <fullName>Additional_Operating_Site_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Additional Operating Site Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Application_Package__c</fullName>
        <label>Allow Application Package</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Applications_CNCS__c</fullName>
        <label>If Yes,SubmitApplications to CNCS Direct</label>
        <picklist>
            <controllingField>Allow_Prime_Applicants_and_Sub_Applicant__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Concept_Paper__c</fullName>
        <label>Require Concept Paper</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_Prime_Applicants_and_Sub_Applicant__c</fullName>
        <label>Allow Prime and Sub Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Allow_planning_grants_for_this_NOFA__c</fullName>
        <label>Allow planning grants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amendment_Justification_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Amendment Justification </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amendment_Justification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amendment Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Anticipated_num_of_FTEs__c</fullName>
        <inlineHelpText>Full Time Employee</inlineHelpText>
        <label>Anticipated Number of FTEs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apex_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag set to indicate the con tact is being processed in an apex context and validation rules can be bypassed</description>
        <label>Apex flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Due_Date__c</fullName>
        <formula>Parent_NOFA__r.Applications_due_date__c</formula>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Submission_Instructions__c</fullName>
        <label>Application Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps Vista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applications_due_date__c</fullName>
        <label>Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review-In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Board_approval_date__c</fullName>
        <label>Board Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFDA_Name__c</fullName>
        <formula>CFDA_Number__r.CFDA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CFDA Number</label>
        <referenceTo>CFDA_Number__c</referenceTo>
        <relationshipName>Planning</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Program Name</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Capacity Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity_Building_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Capacity Building</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Grants_Awards__c</fullName>
        <label>Cash Grant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Characteristics_and_Priorities__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Characteristics and Priorities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_this_if_competitive_sub_applicatio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check if competitive sub application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_this_if_fixed_price_NOFA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check this if fixed price NOFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Clarification Summary </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clarification_Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clarification Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Sub_Applications_Should_be_Ranked__c</fullName>
        <label>Comp. Sub Applications Should be Ranked</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Sub_Applications__c</fullName>
        <label>Competitive Sub Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <label>Complete?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Due_Date__c</fullName>
        <description>Concept Paper Due Date for this NOFA</description>
        <label>Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Submission_Instructions__c</fullName>
        <label>Concept Paper Submission Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Type__c</fullName>
        <label>Concept Paper Type</label>
        <picklist>
            <controllingField>Allow_Concept_Paper__c</controllingField>
            <picklistValues>
                <fullName>Americorps NCCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americorps VISTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Continuation Changes </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continuation_Changes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuation Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cooperative_Agreement__c</fullName>
        <description>KY. Field for Award.</description>
        <label>Cooperative Agreement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Program_Code__c</fullName>
        <formula>Corporate_Program__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporate Program Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy_C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Cost Effectiveness and Budget Adequacy </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Effectiveness_and_Budget_Adequacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Effectiveness and Budget Adequacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Different_from_Organization_address__c</fullName>
        <label>Different from Organization address?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Disaster Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disaster_Services_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Disaster Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>EIN Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Economic Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Economic Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <formula>Point_of_contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <formula>Point_of_contact1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Efficiency_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Energy Efficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Environmental Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Environmental Stewardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Total_funds_Available__c</fullName>
        <label>Estimated Total Funds Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_num_Grants_to_be_Awarded__c</fullName>
        <label>Estimated Number of Grants to be Awarded</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_of_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Summary of Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Summary_or_Plan_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Evaluation Summary or Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excl_from_mon_Universe__c</fullName>
        <label>Exclude from Monitoring Universe</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Executive Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Executive Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executive_officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Planning1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Yr__c</fullName>
        <label>Fiscal Yr</label>
        <picklist>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_Amount_Nofa__c</fullName>
        <label>Fixed Amount NOFA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fixed_price_NOFA__c</fullName>
        <label>Fixed price NOFA</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Area_and_Objectives_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Focus Area and Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Focus Areas and Objectives - NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Focus_Areas_and_Objectives_NCCC_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Focus Areas and Objectives - NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foster_Grandparents_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foster Grandparents Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Funding_cap_per_Applicant__c</fullName>
        <label>Funding cap per Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Purpose__c</fullName>
        <label>Grant Purpose</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Have_funding_history_with_a_CNCS_Prog_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Have funding history with a CNCS Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Healthy Futures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Healthy Futures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_No_Please_Mention_the_address__c</fullName>
        <label>If No,Please Mention the address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Due_Date__c</fullName>
        <label>Notification of Intent to Apply Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Required__c</fullName>
        <label>Intent to Apply Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Intent_to_Apply_Submission_Instructions__c</fullName>
        <label>Notif. of Intent to Apply Instructions</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Intermediary Justification </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermediary Justification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issuing_Officer__c</fullName>
        <label>Issuing Office</label>
        <picklist>
            <picklistValues>
                <fullName>HQ(Office of Grants Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FFMC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leadership_and_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership and Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_NOFA_ID__c</fullName>
        <label>Legacy NOFA ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>HYPERLINK(&quot;apex/projectlook?id=&quot; &amp; Id &amp; &quot;&amp;parentNofa=&quot; &amp; Parent_NOFA__r.Id , IMAGE( &quot;https://cns--devsb12--c.cs32.content.force.com/servlet/servlet.ImageServer?id=015r00000008unk&amp;oid=00Dr00000000Rxt&quot;, &quot;Submit Application&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lodging_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Lodging Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_City1__c</fullName>
        <formula>Point_of_contact__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City2__c</fullName>
        <formula>Point_of_contact1__r.City</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State1__c</fullName>
        <formula>Point_of_contact__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State2__c</fullName>
        <formula>Point_of_contact1__r.State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_11__c</fullName>
        <formula>Point_of_contact__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_12__c</fullName>
        <formula>Point_of_contact1__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Address_222__c</fullName>
        <formula>Point_of_contact1__r.Street</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street Address  2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip1__c</fullName>
        <formula>Point_of_contact__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip2__c</fullName>
        <formula>Point_of_contact1__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_of_Sub_Budgets__c</fullName>
        <label>Max # of Sub-Budgets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCCC_Dates_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field shows up on the Concept Paper.</description>
        <label>NCCC Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Dates_and_Questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Dates and Questions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NCCC checkbox in Other section.</description>
        <label>NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCCC Program Name</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCCC_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCCC Program Name</label>
        <referenceTo>Program_Name__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs (NCCC Program)</relationshipLabel>
        <relationshipName>NOFAs_RFPs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCC_for_Focus_Areas_and_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOFA_Active_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open to Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOFA_RFP_Summary__c</fullName>
        <label>NOFA/RFP Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NOFA_Sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>NOFA Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NOFA_Status__c</fullName>
        <label>NOFA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_Type__c</fullName>
        <label>NOFA Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNS Amendments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NOFA_name__c</fullName>
        <label>NOFA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name1__c</fullName>
        <formula>Point_of_contact__r.LastName &amp;&quot;,&quot;&amp; Point_of_contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <formula>Point_of_contact1__r.LastName &amp;&quot;,&quot;&amp; Point_of_contact1__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narratives__c</fullName>
        <label>Narratives</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Need_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Need </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_documents__c</fullName>
        <label>Number of Documents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notice_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notice ID</label>
        <referenceTo>Notice__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>